--- a/css/custom.css
+++ b/css/custom.css
@@ -1,17 +1,54 @@
-#copyAlert {
+#copyAlert,
+#copy-confirmation {
     opacity: 0;
     transition: opacity 0.6s ease-in-out;
+    display: none;
 }
 
+/* General styles */
 body {
-    min-width: 250px; /* Adjust the width as needed */
-    min-height: 20px; /* Adjust the height as needed */
-    padding: 10px;
+    font-family: Arial, sans-serif;
+    background-color: #333;
+
+    /* Dark background */
+    color: white;
+    padding: 20px;
+    min-width: 250px;
     box-sizing: border-box;
 }
 
-/* If you have a specific container for your list, you can set a minimum height for it */
-#domain-list {
-    min-height: 150px; /* Adjust as needed */
-    /* Other styling rules for your domain list */
+#header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+}
+
+#logo {
+    height: 40px;
+    margin-right: 10px;
+}
+
+#title {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+/* Button styles */
+#buttons {
+    display: flex;
+    margin-left: 50px;
+    margin-bottom: 4px;
+    justify-content: flex-start;
+}
+
+.clear {
+    margin-right: 10px;
+}
+
+.copy {
+    margin-right: 10px;
+}
+
+.styled-button {
+    border: none;
 }
